product list and refactoring

--- a/ActiveWear.Web.Mvc/Views/Product/Create.cshtml
+++ b/ActiveWear.Web.Mvc/Views/Product/Create.cshtml
@@ -1,13 +1,13 @@
 ﻿@model IEnumerable<ActiveWear.Web.Mvc.Models.ProductViewModel>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Create new product";
 }
 
 <h1>Index</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Create New Product</a>
 </p>
 <table class="table">
     <thead>
