--- a/ActiveWear.Web.Mvc/Views/Shared/_Layout.cshtml
+++ b/ActiveWear.Web.Mvc/Views/Shared/_Layout.cshtml
@@ -3,10 +3,11 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - ActiveWear.Web.Mvc</title>
+    <title>@ViewData["Title"] - ActiveWear Shop Online</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/ActiveWear.Web.Mvc.styles.css" asp-append-version="true" />
+    @await RenderSectionAsync("Styles", required: false)
 </head>
 <body>
     <header>
