--- a/ActiveWear.Web.Mvc/Views/Product/List.cshtml
+++ b/ActiveWear.Web.Mvc/Views/Product/List.cshtml
@@ -30,7 +30,7 @@
             <tr class="productRow">
                 <td><a asp-controller="Product" asp-action="Details" asp-route-id=@product.Id>@product.Name</a></td>
                 <td>@product.Description</td>
-                <td>@product.Price.ToString()</td>
+                <td>@product.Price</td>
                 <td>@product.ProductCategory?.Name</td>
                 <td>@product.ProductBrand?.Name</td>
             </tr>
